Fix book-panel spacing.

--- a/content/css/_kotba.scss
+++ b/content/css/_kotba.scss
@@ -37,7 +37,7 @@ article.recensjoni {
   @media all and (min-width: $laptop-breakpoint) {
 		flex-direction: row;
 	div {
-		padding: 0 $body-margin-half $body-margin-half 0;
+		padding: 0 $body-margin-half 0 0;
 	}
 		img.book-cover {
 			height: $body-margin * 6;
